# book-review-01

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  GEMINI.md  README.md  application.py  docker-compose.dev.yml  docker-compose.yml  import.py  main.py  pyproject.toml  requirements.txt  run_dev.ps1  run_dev.sh  tables.sql
directives/: README.md  crawl_reviews.md  import_books.md  setup_dev_environment.md
execution/: README.md  crawl_reviews.py
pgadmin/: servers.json
static/: site.css
templates/: details.html  index.html  layout.html  list.html  login.html  register.html  search.html
