[project]
name = "book-review-website"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "blinker==1.9.0",
    "cachelib==0.14.0",
    "certifi==2026.4.22",
    "charset-normalizer==3.4.7",
    "click==8.3.3",
    "colorama==0.4.6",
    "fastapi>=0.136.1",
    "flask==3.1.3",
    "flask-session==0.8.0",
    "flask-wtf==1.3.0",
    "greenlet==3.5.0",
    "gunicorn==26.0.0",
    "idna==3.13",
    "itsdangerous==2.2.0",
    "jinja2==3.1.6",
    "markupsafe==3.0.3",
    "msgspec==0.21.1",
    "packaging==26.2",
    "psycopg2>=2.9.12",
    "psycopg2-binary==2.9.12",
    "python-dotenv==1.2.2",
    "requests==2.33.1",
    "soupsieve>=2.8.3",
    "sqlalchemy==2.0.49",
    "typing-extensions==4.15.0",
    "urllib3==2.7.0",
    "uvicorn>=0.47.0",
    "werkzeug==3.1.8",
    "wtforms==3.2.2",
]
